force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__ZoomInfo_External_Id__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ZoomInfo External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>