force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__ZoomInfo_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
    <description>Date and time when Enrich tool was last run.</description>
    <inlineHelpText>Date and time when Enrich tool was last run.</inlineHelpText>
    <label>ZoomInfo Last Updated</label>
    <type>DateTime</type>
</CustomField>