force-app/main/default/objects/DOZISF__ZoomInfo__c/fields/DOZISF__ZoomInfo_URL__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_URL__c</fullName>
    <description>A link to person profile on the zoominfo website.</description>
    <inlineHelpText>A link to person profile on the zoominfo website.</inlineHelpText>
    <label>ZoomInfo URL</label>
    <type>Url</type>
</CustomField>