force-app/main/default/objects/DOZISF__ZoomInfo__c/recordTypes/DOZISF__Company.recordType-meta.xml
<RecordType>
    <fullName>DOZISF__Company</fullName>
    <active>true</active>
    <description>Use for ZoomInfo Company records</description>
    <label>Company</label>
</RecordType>