force-app/main/default/objects/DOZISF__ZoomInfo__c/recordTypes/DOZISF__Contact.recordType-meta.xml
<RecordType>
    <fullName>DOZISF__Contact</fullName>
    <active>true</active>
    <description>Use for ZoomInfo Contact records</description>
    <label>Contact</label>
</RecordType>