force-app/main/default/objects/DOZISF__ZoomInfo__c/recordTypes/DOZISF__ZoomInfo.recordType-meta.xml
<RecordType>
    <fullName>DOZISF__ZoomInfo</fullName>
    <active>true</active>
    <description>Use for ZoomInfo records</description>
    <label>ZoomInfo</label>
</RecordType>